# jyolib

./: .gitignore  README.md  extract.sh  pom.xml
.github/md/: README.md
src/main/java/io/metaloom/jyolib/: BoundingBox.java  Detection.java  YoloLib.java
src/main/java/io/metaloom/jyolib/layout/: BoundingBoxMemoryLayout.java  DetectionArrayMemoryLayout.java  DetectionMemoryLayout.java
src/main/java/io/metaloom/poc/: BoundingBox.java  BoundingBoxArrayMemoryLayout.java  BoundingBoxMemoryLayout.java  Detection.java  DetectionArrayMemoryLayout.java  DetectionMemoryLayout.java  YoloLib.java
src/main/java/io/metaloom/poc/layout/: BoundingBoxMemoryLayout.java  DetectionArrayMemoryLayout.java  DetectionMemoryLayout.java
src/test/java/io/metaloom/jyolib/: YoloLibTest.java
src/test/java/io/metaloom/jyolib/example/: UsageExampleTest.java
src/test/java/io/metaloom/poc/: BBoxTest.java  BoundingBoxMemoryLayout.java  Detection.java  DetectionMemoryLayout.java  VectorAccess.java  YoloLibTest.java  YoloTest.java
yolib/: CMakeLists.txt  build.sh
yolib/src/: off.cpp  yolib.cpp  yolib.hpp
